# RvSpy

./: Cargo.toml  README.md  build.rs  check_output.json
RvSpy.Client/: Class1.cs  RvSpy.Client.csproj
asm_src/: scanner.asm  utils.asm
c_src/: hook.c  nuitka_analyzer.cpp
src/: main.rs
src/core/: behavioral_scanner.rs  cfg.rs  debugger.rs  emulation.rs  entropy.rs  heuristics.rs  mod.rs  nuitka_recovery.rs  pe_parser.rs  strings.rs
src/gui/: mod.rs
src/python/: disasm.rs  disassembler.rs  mod.rs  nuitka_mod.rs  pseudo_cc.rs  pyc_parser.rs
